--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -2,6 +2,8 @@
 
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
+@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Arvo&family=Russo+One&display=swap");
+
 $primary: #9cb7b4;
 $side: #4550509f;
 $forms: #1bb9b9c4;
@@ -11,6 +13,39 @@ $forms: #1bb9b9c4;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+}
+
+h1 {
+  line-height: normal;
+  font-family: "Alfa Slab One", cursive;
+}
+
+h2 {
+  line-height: normal;
+  font-family: "Russo One", sans-serif;
+}
+
+h3 {
+  line-height: normal;
+  font-family: "Russo One", sans-serif;
+}
+
+h4 {
+  line-height: normal;
+  font-family: "Russo One", sans-serif;
+}
+
+h5 {
+  line-height: normal;
+}
+
+p {
+  line-height: normal;
+  font-family: "Arvo", serif;
+}
+
+.logo {
+  font-size: clamp(1em, 1em + 10vw, 3em);
 }
 
 .primary {
@@ -36,16 +71,52 @@ $forms: #1bb9b9c4;
 }
 
 .bidAndLog {
-  margin: 60px;
+  margin-top: 60px;
+  margin-right: 5px;
 }
 
 .bid {
   margin: 30px;
 }
 
+.card-multi {
+  width: 18rem;
+  height: 50rem;
+}
+
+.card-singel {
+  width: auto;
+  margin-right: 10px;
+}
+
+.listings-buttons {
+  margin-left: 1px;
+  flex: none;
+}
+
+.listings-img {
+  max-height: 300px;
+}
+
+.bottom-card {
+  max-height: 150px;
+}
+
+.noLinkDesign {
+  text-decoration: none;
+  color: #000;
+}
+
+.noLinkDesign:hover {
+  text-decoration: none;
+  color: #000;
+}
+
 @media (min-width: 573px) {
   .listingsAndBids {
     display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
