adds footer on all pages and lots of minor changes on js files

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -15,6 +15,14 @@ $forms: #1bb9b9c4;
   overflow-x: hidden;
 }
 
+body {
+  min-height: 100vh;
+  margin: 0;
+
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
 h1 {
   line-height: normal;
   font-family: "Alfa Slab One", cursive;
